# vulkano

./: Cargo.toml  flake.nix  rustfmt.toml
src/: app.rs  camera.rs  command_buffer_builder_ext.rs  frag.glsl  gui.rs  init.rs  lib.rs  main.rs  mod.rs  model.rs  render.rs  shaders.rs  vert.glsl  vertex.rs
src/core/: command_buffer_builder_ext.rs  init.rs
src/render/: camera.rs  model.rs  pipeline.rs  render.rs
src/shaders/: frag.glsl  vert.glsl
