[package]
name = "vulkano-app"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = "0.29"
egui-winit = { version = "0.31", default-features = false }
egui_winit_vulkano = { git = "https://github.com/Letronix624/egui_winit_vulkano" }
egui = "0.31"
image = "0.25"
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
gilrs = "0.11"
vulkano = "0.35"
vulkano-shaders = "0.35"
vulkano-util = "0.35"
egui_demo_lib = "0.31"
raw-window-handle = "0.6"
tobj = "4.0"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
